tests/ui/coverage-attr/subword.stderr
error: malformed `coverage` attribute input
  --> $DIR/subword.rs:6:1
   |
LL | #[coverage(yes(milord))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   | ~~~~~~~~~~~~~~~~
LL | #[coverage(on)]
   | ~~~~~~~~~~~~~~~

error: malformed `coverage` attribute input
  --> $DIR/subword.rs:9:1
   |
LL | #[coverage(no(milord))]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   | ~~~~~~~~~~~~~~~~
LL | #[coverage(on)]
   | ~~~~~~~~~~~~~~~

error: malformed `coverage` attribute input
  --> $DIR/subword.rs:12:1
   |
LL | #[coverage(yes = "milord")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   | ~~~~~~~~~~~~~~~~
LL | #[coverage(on)]
   | ~~~~~~~~~~~~~~~

error: malformed `coverage` attribute input
  --> $DIR/subword.rs:15:1
   |
LL | #[coverage(no = "milord")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   | ~~~~~~~~~~~~~~~~
LL | #[coverage(on)]
   | ~~~~~~~~~~~~~~~

error: aborting due to 4 previous errors

